--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,26 @@
-@import "./reset.scss";
-@import "./index.scss";
 @import "./App.scss";
-@import "./base.scss";
+@import "./logo.scss";
+@import "./user.scss";
+@import "./header.scss";
+@import "./login.scss";
+
+
+#root {
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;    
+}
+
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
