--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,8 @@
 @import "./hero.scss";  
 @import "./feature.scss";
 @import "./footer.scss";
+@import "./loginForm.scss"; 
+@import "./signIn.scss";
 
 
 #root {
