--- a/src/style/loginForm.scss
+++ b/src/style/loginForm.scss
@@ -1,48 +1,59 @@
-.sign-in-button {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-}
+.sign-in- {
+    &button {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        font-size: 1.1rem;
+        font-weight: bold;
+        margin-top: 1rem;
+        border-color: #00bc77;
+        background-color: #00bc77;
+        color: #fff;
+    }
 
-.sign-in-content {
-box-sizing: border-box;
-background-color: white;
-width: 300px;
-margin: 0 auto;
-margin-top: 3rem;
-padding: 2rem;
-}
+    &content {
+        box-sizing: border-box;
+        background-color: white;
+        width: 300px;
+        margin: 0 auto;
+        margin-top: 3rem;
+        padding: 2rem;
+    }
 
-.sign-in-icon {
-font-size: 5rem;
+    &icon {
+        font-size: 5rem;
+    }
+    &error-text {
+        color: red;
+    }
 }
+  
+// .sign-in-
 
-.input-remember {
-display: flex;
-}
+// .sign-in-
 
-.input-remember label {
-margin-left: 0.25rem;
-}
+.input- {
+    &remember {
+        display: flex;
 
-.input-wrapper {
-display: flex;
-flex-direction: column;
-text-align: left;
-margin-bottom: 1rem;
-}
+        & label {
+            margin-left: 0.25rem;
+        }
+    }
 
-.input-wrapper label {
-font-weight: bold;
-}
+    &wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-bottom: 1rem;
 
-.input-wrapper input {
-padding: 5px;
-font-size: 1.2rem;
+        & label {
+            font-weight: bold;
+        }
+
+        & input {
+            padding: 5px;
+            font-size: 1.2rem;
+        }
+    }
 }
