--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,8 @@
 @import "./footer.scss";
 @import "./loginForm.scss"; 
 @import "./signIn.scss";
+@import "./userAccount.scss";
+@import "./userHeader.scss";
 
 
 #root {
