--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,22 +1,25 @@
-@import "./App.scss";
-@import "./logo.scss";
-@import "./user.scss";
-@import "./header.scss";
-@import "./login.scss";
-@import "./hero.scss";
-@import "./feature.scss";
-@import "./footer.scss";
-@import "./loginForm.scss";
-@import "./signIn.scss";
-@import "./userAccount.scss";
-@import "./userHeader.scss";
-@import "./editProfile.scss";
-
+@import './App.scss';
+@import './logo.scss';
+@import './user.scss';
+@import './header.scss';
+@import './login.scss';
+@import './hero.scss';
+@import './feature.scss';
+@import './footer.scss';
+@import './loginForm.scss';
+@import './signIn.scss';
+@import './userAccount.scss';
+@import './userHeader.scss';
+@import './editProfile.scss';
 
 #root {
     margin: 0;
     padding: 0;
     max-width: none;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 html {
