--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -1,17 +1,25 @@
 .main-nav a {
-    font-weight: bold;
-    color: #2c3e50;
+  font-weight: bold;
+  color: #2c3e50;
+}
+
+.main-nav a.router-link-exact-active {
+  color: #42b983;
+}
+
+.main-nav-item {
+  text-decoration: none;
+  margin-right: 0.5rem;
+}
+
+.main-nav-item:hover {
+  text-decoration: underline;
+}
+
+.main-nav {
+  div {
+    div {
+      display: flex;
+    }
   }
-  
-  .main-nav a.router-link-exact-active {
-    color: #42b983;
-  }
-  
-  .main-nav-item {
-    text-decoration: none;
-    margin-right: 0.5rem;
-  }
-  
-  .main-nav-item:hover {
-    text-decoration: underline;
-  }
+}
